Changed Image source.

--- a/basicpage.html
+++ b/basicpage.html
@@ -10,7 +10,7 @@
         <h1>Logan Pierce</h1>
         <h2>Lives in: San Antonio, TX</h2>
         <p>My system RAM: 6 GB</p>
-        <p><img src="C:/Users/cdr.cdr-PC/Desktop/Logan and Natalie.jpg" width="240" alt="profile picture"></p>
+        <p><img src="Logan and Natalie.jpg" width="240" alt="profile picture"></p>
         <p>&square; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &square;</p>
     </body>
 </html>
