--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,30 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<title>My First Page</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>CIT 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
+<meta name="description" content="Assignment portal page for Logan Pierce in CIT 230: Web Frontend Development at BYU-Idaho.">
+
 </head>
     
 <body>
-<h1>Test for CIT230</h1>
-    <p>This is a test.</p>
+<header>
+<h1>Logan Michael Pierce
+</h1>
+</header>
+<nav> 
+<!––Main Menu goes here.-->
+</nav>
+<main>
+<img src="Logan and Natalie.jpg" width="200" height="273" alt="My Profile Picture">  
+<h1>"CIT 230 - Assignment Portal."
+</h1>
+<li>Lesson TBD: <a href="#">Assignment Label</a></li>
+</main>
+<footer>
+&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+<link rel="stylesheet" href="styles/main.css">
+</footer>
 </body>
 </html>
