--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -1,37 +1,52 @@
-<!DOCTYPE>
-  <head>
+<!DOCTYPE html>
+<html  lang="en">
+<head>
       <title>The Quad-City Transportation Center</title>
       <meta charset="utf-8">
       <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
       <link rel="stylesheet" type="text/css" href="main.css">     
   </head>
+<body>
   <header>
   <h1>The Quad-Cities Transporation Center</h1>
       <h3>"We have your transporation needs covered!"  </h3>
   </header>
-   <body>
 <nav>
-    <ul>
-    <li><a href="#" class="current">Home</a>
-    <li><a href="products/">Products</a>
-    <li><a href="services/">Services</a>
-    <li><a href="locations/">Locations</a>
-    <li><a href="about/">About Us</a>
-    <li><a href="contact/">Contact Us</a>
-    <li><a href="search/">Search</a>
+<ul class="menu">
+        <li>
+            <a href="#" class="current">Home</a>
+            </li>
+        <li>
+            <a href="products/">Products</a>
+            </li>
+        <li>
+            <a href="services/">Services</a>
+            </li>
+        <li>
+            <a href="locations/">Locations</a>
+            </li>
+        <li>
+            <a href="about/">About Us</a>
+            </li>
+        <li>
+            <a href="contact/">Contact Us</a>
+            </li>
+        <li>
+            <a href="search/">Search</a>
+            </li>
     </ul>
-    </nav>
+</nav>
 <main>
 <img src="http://lorempixel.com/300/200" width="300" height="200" alt="transport">
     <h3>Featured Products &amp;Services</h3>        
  <ul>
   <li>Service One</li>
   <li>Service Two</li>
-  <li>Products</li>
-<ul><li>Product 1
+  <li><ul><li>Products</li>
+     <li>Product 1</li>
     <li>Product 2</li>
-    <li>Product 3</li></ul>
- </ul>
+    <li>Product 3</li></ul></li>
+    </ul>
 <style> p {text-indent: 50px;}</style><p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum urna dui. Ut imperdiet facilisis sapien. Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam. 
 </p>
@@ -43,7 +58,7 @@ Locations
   <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a>
      <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</a>
            </ul>
-     <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
+     <em>Subscribe to our Newsletter to get daily specials emailed to you directly!!</em>
  <footer>
   <p>To find out more, contact Bobby at 4455.
  </p></footer>
@@ -51,3 +66,4 @@ Locations
      <p>&copy;2016 |  The Quad-Cities Transporation Center   | Spokane, WA </p><span class="smaller"></span>
  </footer>
 </body>
+</html>
