--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 <img src="Logan and Natalie.jpg" width="200" height="273" alt="My Profile Picture">  
 <h1>"CIT 230 - Assignment Portal."
 </h1>
-<li>Lesson TBD: <a href="#">Assignment Label</a></li>
+<li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
 </main>
 <footer>
 &copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
