Updated image name

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 <!––Main Menu goes here.-->
 </nav>
 <main>
-<img src="Logan and Natalie.jpg" width="200" height="273" alt="My Profile Picture">  
+<img src="LoganAndNatalie.jpg" width="200" height="273" alt="My Profile Picture">  
 <h1>"CIT 230 - Assignment Portal."
 </h1>
 <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
