--- a/Index.html
+++ b/Index.html
@@ -10,20 +10,23 @@
     
 <body>
 <header>
-<h1>Logan M. Pierce
+    <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p>
 </h1>
 </header>
 <nav> 
 <!––Main Menu goes here.-->
 </nav>
 <main>
-<img src="LoganAndNatalie.jpg" width="200" height="273" alt="My Profile Picture">  
-<h1>"CIT 230 - Assignment Portal."
+<img src="LoganAndNatalie.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
+    <br>
+    <br>
+    <br>
+    <h1><p align="center">"CIT 230 - Assignment Portal."</p>
 </h1>
-<li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
+    <li><p align="center">Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></p></li>
 </main>
 <footer>
-&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+    <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
 <link rel="stylesheet" href="styles/main.css">
 </footer>
 </body>
