--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     <br>
     <h1><p align="center">"CIT 230 - Assignment Portal."</p>
 </h1>
-    <li><p align="center">Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></p></li>
+    <li><p align="center">Lesson 3: <a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></p></li>
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
