--- a/assignments/lesson-4/franklin-4.html
+++ b/assignments/lesson-4/franklin-4.html
@@ -9,7 +9,7 @@
 <header>
 <img src="" width="" height="" alt="logo">
 <h1>Weather Wizard</h1>
-<h3>We're here rain or shine!</h3>
+<div class="subheading">"We're here rain or shine!"</div>
 </header>
 <nav>
 <ul>
@@ -26,28 +26,28 @@
 <img src="" alt ="Weather" width ="" height="">
 <section>
 <h2>Franklin</h2>
-<h3>Town Stats</h3>
-<h3>Current Temperature:</h3>
+<h3>Weather data</h3>
+<h3>10 day forecast</h3>
 <h3>more information...</h3>
 <img src="" alt ="forecast picture" width ="" height="">
 </section>
 <section>
 <h2>Greenville</h2>
-<h3>Town Stats</h3>
-<h3>Current Temperature:</h3>
+<h3>Weather data</h3>
+<h3>10 day forecast</h3>
 <h3>more information...</h3>
 <img src="" alt ="forecast picture" width ="" height=""> 
 </section>
 <section>
 <h2>Springfield</h2>
-<h3>Town Stats</h3>
-<h3>Current Temperature:</h3>
+<h3>Weather data</h3>
+<h3>10 day forecast</h3>
 <h3>more information...</h3>
 </section>
 <img src="" alt ="forecast picture" width ="" height=""> 
 </main>
 <footer>
-<h6><aside><p class="info bar"> 123 Main St Franklin, MU 83454 (999-999-9999 contact@theurl.com &copy; 2020 - Weather Wizard <span id="currentdate">placeholder</span></p>
+<h6><aside><p class="footer-bar"> &copy; Weather Wizard <span id="currentdate">placeholder</span></p>
 </aside></h6>
 </footer>
 </body>
