--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
     <h1><p align="center">"CIT 230 - Assignment Portal."</p>
 </h1>
     <li><p align="center">Lesson 3: <a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></p></li>
-    <li><p align="center">Lesson 4: <a href=>Franklin City Project</a></p></li>
+    <li><p align="center">Lesson 4: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/franklin-4.html>Franklin City Project</a></p></li>
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
