--- a/Index/Index.html
+++ b/Index/Index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CIT 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in CIT 230: Web Frontend Development at BYU-Idaho.">
-
+<link rel="stylesheet" href="styles/normalize.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
     
 <body>
@@ -14,7 +15,7 @@
 </h1>
 </header>
 <nav> 
-<!––Main Menu goes here.-->
+<!––Main Menu goes here.-->++
 </nav>
 <main>
 <img src="LoganAndNatalie.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
