--- a/assignments/lesson-4/franklin-4.html
+++ b/assignments/lesson-4/franklin-4.html
@@ -23,20 +23,20 @@
 </nav>
 <main>
 <h2>Weather Story</h2>
-<img src="" alt ="Weather" width ="" height="">
+<img src="GitHub\Tienut73.github.io\assignments\lesson-5\lesson-5 copy\ImagesL5/Cloudy.jpg" alt ="Weather" width ="600" height="400">
 <section>
 <h2>Franklin</h2>
 <h3>Weather data</h3>
 <h3>10 day forecast</h3>
 <h3>more information...</h3>
-<img src="" alt ="forecast picture" width ="" height="">
+<img src="assignments\lesson-5\lesson-5 copy\ImagesL5/Cloudy.jpg" alt ="forecast picture" width ="600" height="400">
 </section>
 <section>
 <h2>Greenville</h2>
 <h3>Weather data</h3>
 <h3>10 day forecast</h3>
 <h3>more information...</h3>
-<img src="" alt ="forecast picture" width ="" height=""> 
+<img src="lesson-5 copy\ImagesL5/Cloudy.jpg" alt ="forecast picture" width ="600" height="400"> 
 </section>
 <section>
 <h2>Springfield</h2>
@@ -44,7 +44,7 @@
 <h3>10 day forecast</h3>
 <h3>more information...</h3>
 </section>
-<img src="" alt ="forecast picture" width ="" height=""> 
+<img src="C:\Users\lucky\OneDrive\Documents\GitHub\Tienut73.github.io\assignments\lesson-5\lesson-5 copy\ImagesL5/Cloudy.jpg" alt ="forecast picture" width ="600" height="400"> 
 </main>
 <footer>
 <h6><aside><p class="footer-bar"> &copy; Weather Wizard <span id="currentdate">placeholder</span></p>
