--- a/assignments/lesson-6/franklin-6.html
+++ b/assignments/lesson-6/franklin-6.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="small.css">
-<link rel="stylesheet" type="text/css" href="normalize.css">
+<link rel="stylesheet" type="text/css" href="CSSL6/small.css">
+<link rel="stylesheet" type="text/css" href="CSSL6/normalize.css">
 <style>
 ul {
     list-style-type: none;
