--- a/Index/Index.html
+++ b/Index/Index.html
@@ -27,8 +27,8 @@
     <li><p align="center">Lesson 3: <a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></p></li>
     <li><p align="center">Lesson 4: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-4/franklin-4.html>Franklin City Project</a></p></li>
      <li><p align="center">Lesson 5: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-5/lesson-5%20copy/index.html>Franklin City Weather Wizard</a></p></li>
-     <li><p align="center">Lesson 6: <a href=hhttps://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-6/franklin-6.html>Franklin City Weather Wizard part 2</a></p></li>
-     <li><p align="center">Lesson 7: <a href=hhttps://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-7/franklin-7.html>Franklin City Weather Wizard part 3</a></p></li>
+     <li><p align="center">Lesson 6: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-6/franklin-6.html>Franklin City Weather Wizard part 2</a></p></li>
+     <li><p align="center">Lesson 7: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-7/index.html>Franklin City Weather Wizard part 3</a></p></li>
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
