--- a/assignments/lesson-7/gallery.html
+++ b/assignments/lesson-7/gallery.html
@@ -10,6 +10,17 @@
 <link rel="stylesheet" type="text/css" href="CSSL6/large.css">
 <link rel="stylesheet" type="text/css" href="CSSL6/normalize.css">
 <style>
+    .flex-container {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .flex-container > div {
+        background-color: #f1f1f1;
+        width: auto;
+        margin: auto;
+        text-align: center;
+        line-height: auto;
+    }
     .grid {
         display: grid;
         grid-column-gap: 5%;
@@ -60,6 +71,7 @@ div.desc {
   </nav>
 <div class= "grid">
 <div class="gallery">
+    <div class="flex-container">
   <figure class="myphoto">
       <img src="imagesL7/arid-mesa-LRG.jpeg" alt="Arid Mesa" sizes="50vw"
          srcset="imagesL7/arid-mesa-SML.jpeg 200w,
@@ -69,8 +81,10 @@ div.desc {
       </figure>
   <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae. </div>
     </div>
+    </div>
 
     <div class="gallery">
+        <div class="flex-container">
   <figure class="myphoto">
       <img src="imagesL7/forked-bolt-LRG.jpeg" alt="Forked Bolt" sizes="50vw"
          srcset="imagesL7/forked-bolt-SML.jpeg 200w,
@@ -80,8 +94,10 @@ div.desc {
       </figure>
   <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae. </div>
     </div>
+    </div>
 
     <div class="gallery">
+        <div class="flex-container">
   <figure class="myphoto">
       <img src="imagesL7/coldsnap-LRG.jpg" alt="Coldsnap" sizes="50vw"
          srcset="imagesL7/coldsnap-SML.jpeg 200w,
@@ -91,8 +107,10 @@ div.desc {
       </figure>
   <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae. </div>
     </div>
+    </div>
 
     <div class="gallery">
+        <div class="flex-container">
   <figure class="myphoto">
       <img src="imagesL7/foggy-LRG.jpg" alt="Foggy" sizes="50vw"
          srcset="imagesL7/foggy-SML.jpeg 200w,
@@ -102,8 +120,10 @@ div.desc {
       </figure>
   <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae. </div>
     </div>
+    </div>
     
     <div class="gallery">
+        <div class="flex-container">
     <figure class="myphoto">
       <img src="imagesL7/inferno-LRG.jpeg" alt="Inferno" sizes="50vw"
          srcset="imagesL7/inferno-SML.jpeg 200w,
@@ -113,8 +133,10 @@ div.desc {
       </figure>
     <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae.</div>
     </div>
+    </div>
     
     <div class="gallery">
+        <div class="flex-container">
     <figure class="myphoto">
       <img src="imagesL7/twister-LRG.jpeg" alt="Twister" sizes="50vw"
          srcset="imagesL7/twister-SML.jpeg 200w,
@@ -125,5 +147,6 @@ div.desc {
     <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante urna. Aliquam tempus volutpat fringilla. Aliquam auctor a metus sit amet scelerisque. Duis aliquam ultrices enim, vitae volutpat neque feugiat vitae.</div>
     </div>
 </div>
+    </div>
 </body>
 </html>
