--- a/assignments/lesson-9/api-test.html
+++ b/assignments/lesson-9/api-test.html
@@ -9,7 +9,7 @@
   <h1>OpenWeatherMap.org API Test</h1>
   <p>The current temperature in Franklin is <span id="current-temp"></span>&deg; F</p>
   <script src="js/weatherapi.js">
-        var requestURL = '';
+        var requestURL = 'https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-9/weatherapi.js';
        var request = new XMLHttpRequest(); 
         request.open('GET', requestURL);
         request.responseType = 'json';
