--- a/assignments/lesson-9/api-test.html
+++ b/assignments/lesson-9/api-test.html
@@ -7,7 +7,7 @@
   </head>
     <body>
   <h1>OpenWeatherMap.org API Test</h1>
-  <p>The current temperature in Franklin is <span id="current-temp"></span>&deg; F</p>
+  <p>The current temperature in Franklin is <span id="current-temp">00</span>&deg; F</p>
   <script src="js/weatherapi.js">
         var requestURL = 'https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-9/weatherapi.js';
        var request = new XMLHttpRequest(); 
