--- a/assignments/lesson-9/StormCenter/index.html
+++ b/assignments/lesson-9/StormCenter/index.html
@@ -225,6 +225,9 @@ document.write(today);
 </script>
         </p>
           </section>
+      <section>
+      <p>Data courtesy <a href="https://openweathermap.org/">openweathermap.org</a></p>
+      </section>
       
   </footer>
 
