--- a/Index/Index.html
+++ b/Index/Index.html
@@ -31,7 +31,8 @@
      <li><p align="center">Lesson 7: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-7/index.html>Franklin City Weather Wizard part 3</a></p></li>
     
     <li><p align="center">Lesson 8: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-8/StormCenter/stormcenter.html>Severe Weather Form</a></p></li>
-    <li><p align="center">Lesson 9: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-9/superheroes/heroes.html>Super Hero Page</a></p></li>
+    <li><p align="center">Lesson 9: <a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-9/superheroes/heroes.html>Super Hero Page</a>
+<a href=https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-9/StormCenter/index.html>Weather Wizard</a></p></li>
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
