--- a/assignments/lesson-10/StormCenter/greenville.html
+++ b/assignments/lesson-10/StormCenter/greenville.html
@@ -6,10 +6,10 @@
 <title>Weather Center</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="stormcenter/CSSL10/small.css">
-<link rel="stylesheet" type="text/css" href="stormcenter/CSSL10/medium.css">
-<link rel="stylesheet" type="text/css" href="stormcenter/CSSL10/large.css">
-<link rel="stylesheet" type="text/css" href="stormcenter/CSSL10/normalize.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/small.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/medium.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/large.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/normalize.css">
 <style>
     .flex-container {
         display: flex;
@@ -65,12 +65,12 @@ li a:hover {
        <nav class="clearfix">
       <button onclick="toggleMenu()">&#9776;</button>
     <ul class="hide" id="primeNav">
-        <li class="active"><a href="#home" onclick="window.open('index.html')">>Home</a></li>
-    	<li><a href="#franklin" onclick="window.open('franklin.html')">Franklin</a></li>
-    	<li><a href="#greenville" onclick="window.open('greenville.html')">Greenville</a></li>
-    	<li><a href="#springfield" onclick="window.open('springfield.html')">Springfield</a></li>
-    	<li><a href="#stormcenter" onclick="window.open('stormcenter.html')">Storm Center</a></li>
-    	<li><a href="#gallery" onclick="window.open('gallery.html')">Gallery</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+    	<li><a href="franklin.html">Franklin</a></li>
+    	<li><a href="greenville.html">Greenville</a></li>
+    	<li><a href="springfield.html">Springfield</a></li>
+    	<li><a href="stormcenter.html">Storm Center</a></li>
+    	<li><a href="gallery.html">Gallery</a></li>
             </ul>		
   </nav>
       <main id="page-main">
