--- a/assignments/lesson-10/StormCenter/index.html
+++ b/assignments/lesson-10/StormCenter/index.html
@@ -5,11 +5,12 @@
 <meta charset="utf-8">
 <title>Weather Center</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
+<meta name="author" content="Logan Pierce">
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/small.css">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/medium.css">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/large.css">
-<link rel="stylesheet" type="text/css" href="stormcenter/CSSL10/normalize.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/small.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/medium.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/large.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/normalize.css">
 <style>
     .flex-container {
         display: flex;
@@ -77,13 +78,13 @@ li a:hover {
 
   <nav class="clearfix">
       <button onclick="toggleMenu()">&#9776;</button>
-    <ul class="hide" id="primeNav">
-        <li class="active"><a href="#home" onclick="window.open('index.html')">>Home</a></li>
-    	<li><a href="#franklin" onclick="window.open('franklin.html')">Franklin</a></li>
-    	<li><a href="#greenville" onclick="window.open('greenville.html')">Greenville</a></li>
-    	<li><a href="#springfield" onclick="window.open('springfield.html')">Springfield</a></li>
-    	<li><a href="#stormcenter" onclick="window.open('stormcenter.html')">Storm Center</a></li>
-    	<li><a href="#gallery" onclick="window.open('gallery.html')">Gallery</a></li>
+    <ul id="primeNav" class="hide">
+        <li><a href="index.html">Home</a></li>
+    	<li><a href="franklin.html">Franklin</a></li>
+    	<li><a href="greenville.html">Greenville</a></li>
+    	<li><a href="springfield.html">Springfield</a></li>
+    	<li><a href="stormcenter.html">Storm Center</a></li>
+    	<li><a href="gallery.html">Gallery</a></li>
             </ul>		
   </nav>
     
@@ -256,10 +257,10 @@ document.write(today);
   </div>
 
 </body>
-     <script src="js/currentdate.js"></script>
-    <script src="js/hamburger.js"></script>
-    <script src="js/windchill.js"></script>
-    <script src="js/townData.js"></script>
+     <script src="JSl10/currentdate.js"></script>
+    <script src="JSL10/hamburger.js"></script>
+    <script src="JSL10/windchill.js"></script>
+    <script src="JSL10/townData.js"></script>
     
     <script>
         var urlString, urlArray, pageHREF, menu, i, currentURL;
