--- a/assignments/lesson-10/StormCenter/stormcenter.html
+++ b/assignments/lesson-10/StormCenter/stormcenter.html
@@ -5,10 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/small.css">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/medium.css">
-<link rel="stylesheet" type="text/css" href="StormCenter/CSSL10/large.css">
-<link rel="stylesheet" href="StormCenter/CSSL10/normalize.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/small.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/medium.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/large.css">
+<link rel="stylesheet" type="text/css" href="CSSL10/normalize.css">
 <style>
     .flex-container {
         display: flex;
@@ -71,17 +71,14 @@ li a:hover {
     
 <nav class="clearfix">
       <button onclick="toggleMenu()">&#9776;</button>
-    <ul id="primeNav" class="hide">
-    	<li><a href="#home"
-                onclick="window.open('index.html')">Home</a></li>
-    	<li class="active"><a href="#franklin">Franklin</a></li>
-    	<li><a href="#greenville">Greenville</a></li>
-    	<li><a href="#springfield">Springfield</a></li>
-    	<li><a href="#stormcenter"
-               onclick="window.open('stormcenter.html')">Storm Center</a></li>
-    	<li><a href="#gallery"
-               onclick="window.open('gallery.html')">Gallery</a></li>
-    </ul>		
+    <ul class="hide" id="primeNav">
+        <li class="active"><a href="index.html">Home</a></li>
+    	<li><a href="franklin.html">Franklin</a></li>
+    	<li><a href="greenville.html">Greenville</a></li>
+    	<li><a href="springfield.html">Springfield</a></li>
+    	<li><a href="stormcenter.html">Storm Center</a></li>
+    	<li><a href="gallery.html">Gallery</a></li>
+            </ul>		
   </nav>
 <main>
     <h1>Severe Weather Report Center</h1>
