--- a/assignments/lesson-11/Index.html
+++ b/assignments/lesson-11/Index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alcove Digital Systems</title>
-	<link rel="stylesheet" href="CSS/style.css">
+	<link rel="stylesheet" href="lesson-11/css/style.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 		$(function(){
@@ -143,11 +143,11 @@
 		<div class="footer">
             <h5>© Alcove Digital Systems | <a href="#">Terms of Use</a></h5>
           <ul>   
-            <li><a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-11/0animatedMenuBegin.html">| Animated Menu |</a></li>
-             <li><a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-11/1DropDownMenuBegin.html">Drop Down Menu |</a></li>
-             <li><a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-11/2fruitBasketBegin.html">Fruit Basket |</a></li>
-             <li><a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-11/3InsertHTMLBegin.html">Insert HTML |</a></li>
-             <li><a href="https://github.com/Tienut73/Tienut73.github.io/blob/master/assignments/lesson-11/4toggleButtonBegin.html">Toggle Button |</a></li>
+            <li><a href="0animatedMenuBegin.htm">| Animated Menu |</a></li>
+             <li><a href="1DropDownMenuBegin.htm">Drop Down Menu |</a></li>
+             <li><a href="2fruitBasketBegin.htm">Fruit Basket |</a></li>
+             <li><a href="3InsertHTMLBegin.htm">Insert HTML |</a></li>
+             <li><a href="4toggleButtonBegin.htm">Toggle Button |</a></li>
               </ul>
 		</div>
 	</div>
