--- a/assignments/lesson-11/2fruitBasketBegin.htm
+++ b/assignments/lesson-11/2fruitBasketBegin.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Fruit Basket</title>
-	<link rel="stylesheet" href="CSS/fruitBasket.css">
+	<link rel="stylesheet" href="css/fruitBasket.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 	$(function(){
