--- a/assignments/lesson-11/spotTheSymbol.htm
+++ b/assignments/lesson-11/spotTheSymbol.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Spot the Symbol</title>
-	<link rel="stylesheet" href="css/spotthesymbol.css">
+	<link rel="stylesheet" href="CSS/spotthesymbol.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 		$(function () {
