--- a/assignments/lesson-11/3InsertHTMLBegin.htm
+++ b/assignments/lesson-11/3InsertHTMLBegin.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inserting HTML</title>
-	<link rel="stylesheet" href="css/insertingHTML.css">
+	<link rel="stylesheet" href="CSS/insertingHTML.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 	$(function(){
