--- a/assignments/lesson-11/4toggleButtonBegin.htm
+++ b/assignments/lesson-11/4toggleButtonBegin.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ToggleButton</title>
-	<link rel="stylesheet" href="css/toggleBtn.css">
+	<link rel="stylesheet" href="CSS/toggleBtn.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 		$(function () {
