--- a/assignments/lesson-11/Index.html
+++ b/assignments/lesson-11/Index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alcove Digital Systems</title>
-	<link rel="stylesheet" href="lesson-11/css/style.css">
+	<link rel="stylesheet" href="CSS/style.css">
 	<script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
 		$(function(){
