--- a/assignments/lesson-11/Index.html
+++ b/assignments/lesson-11/Index.html
@@ -127,7 +127,7 @@
 				<div class="boxes box3">
 					<h2>Our Work</h2>
 					<hr>
-					<a href="#" class="showcaseBtn"><img src="img/websites.jpg" alt=""></a>
+					<a href="#" class="showcaseBtn"><img src="img/quote.png" alt=""></a>
 					<a href="#" class="showcaseBtn"><img src="img/mobileapps.jpg" alt=""></a>
 					<a href="#" class="showcaseBtn"><img src="img/webapps.jpg" alt=""></a>
 					<select name="showcaseOthers" id="showcaseOthers">
