--- a/assignments/lesson-11/Index.html
+++ b/assignments/lesson-11/Index.html
@@ -51,7 +51,7 @@
 			<!-- Get a Free Quote Form -->
 			<div class="registerForm">
 				<form id="GetAQuoteForm">
-					<img class="ReqAQuoteImg" src="img/quote.png" alt="">
+					<img class="ReqAQuoteImg" src="IMG/quote.png" alt="">
 					<br>
 					<div class="FormFieldHolder">
 						<div class="labelHolder">
@@ -127,9 +127,9 @@
 				<div class="boxes box3">
 					<h2>Our Work</h2>
 					<hr>
-					<a href="#" class="showcaseBtn"><img src="img/quote.png" alt=""></a>
-					<a href="#" class="showcaseBtn"><img src="img/mobileapps.jpg" alt=""></a>
-					<a href="#" class="showcaseBtn"><img src="img/webapps.jpg" alt=""></a>
+					<a href="#" class="showcaseBtn"><img src="IMG/quote.png" alt=""></a>
+					<a href="#" class="showcaseBtn"><img src="IMG/mobileapps.jpg" alt=""></a>
+					<a href="#" class="showcaseBtn"><img src="IMG/webapps.jpg" alt=""></a>
 					<select name="showcaseOthers" id="showcaseOthers">
 						<option value="01">UI/UX Design</option>
 						<option value="02">Big Data Implementation</option>
