--- a/assignments/lesson-12/Index.html
+++ b/assignments/lesson-12/Index.html
@@ -2,20 +2,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+<link href="https://fonts.googleapis.com/css?family=Georgia" rel="stylesheet">
 <meta charset="utf-8">
-<link rel="shortcut icon" href="https://www.bikeleague.org/sites/default/files/TheLeague_favicon.png" type="image/png" />
+<link rel='shortcut icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' type='image/logo'>
+<link rel='icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' type='image/logo'>
 <meta property="site_name" content="The Mountain Spoke" />
 <meta property="title" content="Bozeman's Best Bike Business." />
 <meta itemprop="name" content="Bozeman's Best Bike Business." />
 <meta name="dcterms.title" content="Bicycle Friendly America℠" />
   <meta name="viewport" content="initial-scale=1, width=device-width">
   <title>The Mountain Spoke | Bozeman's Best Bike Business</title>
-  <style type="text/css" media="all">
 <link rel="stylesheet" type="text/css" href="CSS/small.css">
 <link rel="stylesheet" type="text/css" href="CSS/medium.css">
 <link rel="stylesheet" type="text/css" href="CSS/large.css">
 <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
-</style>
+
 <script type="text/javascript">
 
     jQuery(document).ready(function($){     
@@ -85,27 +86,14 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <div class="region region-sidebar-interior">   
     <div id="block-menu-menu-interior-menu" class="block block-menu clearfix " >
         <a href="/">
-    <img src="/sites/all/themes/lab/images/league-logo.png" class="sidebar-logo">
+    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogo.jpg" class="sidebar-logo">
   </a>
   <div class="content">
-    <ul class="menu"><li class="first collapsed"><a href="/content/about-league">About the League</a></li>
-<li class="expanded active-trail"><a href="/bfa" class="active-trail active">Bicycle Friendly America</a><ul class="menu"><li class="first leaf"><a href="/bfa/awards" title="Search through our Bicycle Friendly America Awards">Award  Database</a></li>
-<li class="collapsed"><a href="/community">Communities</a></li>
-<li class="collapsed"><a href="/business" title="">Businesses</a></li>
-<li class="collapsed"><a href="/university" title="">Universities</a></li>
-<li class="collapsed"><a href="/states">States</a></li>
-<li class="collapsed"><a href="/bfa/toolkit" title="">Tools &amp; Resources</a></li>
-<li class="last leaf"><a href="/content/purchase-bfa-materials">Purchase BFA Materials</a></li>
-</ul></li>
-<li class="collapsed"><a href="/summit">National Bike Summit®</a></li>
-<li class="collapsed"><a href="/ridesmart" title="">Smart Cycling</a></li>
-<li class="collapsed"><a href="/content/making-biking-better">Advocacy</a></li>
-<li class="collapsed"><a href="/bikemonth" title="">National Bike Month</a></li>
-<li class="collapsed"><a href="http://bikeleague.org/content/active-transportation-leadership-institute-0" title="">Leadership Institute</a></li>
-<li class="leaf"><a href="http://nationalbikechallenge.org/" title="The all-new National Bike Challenge is built for everyone, from the road bike kings to the occasional commuter. Enjoy the way you ride. ">National Bike Challenge</a></li>
-<li class="leaf"><a href="https://bikeleague.secure.force.com/storepage" title="">League Store</a></li>
-<li class="last collapsed"><a href="/join" title="">Membership</a></li>
-</ul>    <img src="/sites/all/themes/lab/images/lab-quicklinks-blk.png" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
+    <ul class="menu"><li class="first collapsed"><a href="AdventureTours.html">Adventure Tours</a></li>
+<li class="expanded active-trail"><a href="Event.html" class="active-trail active">Events</a><ul class="menu"><li class="first leaf"><a href="Sales.html" title="Search through our Bicycle Friendly America Awards">Store</a></li>
+<li class="collapsed"><a href="Service.html">Service / Repair</a></li>
+<li class="collapsed"><a href="Contact.html" title="">Contact</a></li>
+</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinks.jpg" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
   </div>
 </div><div id="block-block-1" class="block block-block clearfix " >
         <span class="connect-title">Connect Locally</span>
@@ -168,7 +156,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
       <div class="node-heading-image-container">
 	      
         <div class="node-heading-image">
-		                <img src="/sites/all/themes/lab/images/dummybikeimages/test-image_1.jpg" />
+		                <img src="IMG/bikeLogo.jpg" />
                    
         </div>
       </div>
@@ -1175,7 +1163,7 @@ jQuery('.events').append("<li>?aftermove? event fired.</li>");
         </div>
 
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="/sites/default/files/bfa_blueprint_0.pdf" target="_blank"><img src="/sites/default/files/blueprintthumb_1.jpg" width="160" height="191" /></a></p>
-<p><span style="color: #222222; font-family: georgia,palatino; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; background-color: #ffffff; display: inline ! important; float: none;">Learn how to build a Bicycle Friendly America</span><span style="color: #222222; font-family: georgia,palatino; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; background-color: #ffffff; display: inline ! important; float: none;"><big>℠</big>.</span></p>
+<p><span style="color: #222222; font-family: georgia,palatino; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; background-color: #fff000; display: inline ! important; float: none;">Learn how to build a Bicycle Friendly America</span><span style="color: #222222; font-family: georgia,palatino; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; background-color: #fff000; display: inline ! important; float: none;"><big>℠</big>.</span></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-above"><div class="field-label">Link:&nbsp;</div><div class="field-items"><div class="field-item even">/sites/default/files/bfa_blueprint_0.pdf</div></div></div>  </div>
 
   
