--- a/assignments/lesson-12/Contact.html
+++ b/assignments/lesson-12/Contact.html
@@ -19,7 +19,7 @@
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
-    <a href="#main-content" class="element-invisible element-focusable">Home Page</a>
+    <a href="Index.html" class="element-invisible element-focusable">Home Page</a>
   </div>
     <div id="page-wrapper">
   <div id="main-content-wrapper">
@@ -49,7 +49,7 @@
 <li class="Events"><a href="Event.html" class="Events">Events</a><ul class="menu"><li class="Sales"><a href="Sales.html" title="Store">Store</a></li>
 <li class="Service"><a href="Service.html">Service / Repair</a></li>
 <li class="Contact"><a href="Contact.html" title="">Contact</a></li>
-</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
+</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image">
   </div>
 </div><div id="block-block-1" class="block block-block clearfix " >
         <span class="connect-title"></span>
