--- a/assignments/lesson-12/Index.html
+++ b/assignments/lesson-12/Index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
-    <a href="#main-content" class="element-invisible element-focusable">Home Page</a>
+    <a href="Index.html" class="element-invisible element-focusable">Home Page</a>
   </div>
     <div id="page-wrapper">
   <div id="main-content-wrapper">
