--- a/assignments/lesson-12/Sales.html
+++ b/assignments/lesson-12/Sales.html
@@ -19,7 +19,7 @@
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
-    <a href="#main-content" class="element-invisible element-focusable">Home Page</a>
+    <a href="Index.html" class="element-invisible element-focusable">Home Page</a>
   </div>
     <div id="page-wrapper">
   <div id="main-content-wrapper">
@@ -49,7 +49,7 @@
 <li class="Events"><a href="Event.html" class="Events">Events</a><ul class="menu"><li class="Sales"><a href="Sales.html" title="Store">Store</a></li>
 <li class="Service"><a href="Service.html">Service / Repair</a></li>
 <li class="Contact"><a href="Contact.html" title="">Contact</a></li>
-</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
+</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image">
   </div>
 </div><div id="block-block-1" class="block block-block clearfix " >
         <span class="connect-title"></span>
@@ -137,7 +137,7 @@
           
         </div>
         <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike1SML.jpeg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike4SML.jpeg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
            
   
@@ -167,6 +167,9 @@
   
   <div class="pane-content">
       <p></p>
+      <div class="content clearfix">
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/pennyFarthing.JPG" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
     <h4>Some of the features included on our new site:</h4>
 <ul><li>The Adventure Tours page details daily guided bicycle adventures with information about the length, required skill level, cost and location of the tours.</li>
 <li>The Event page highlights our annual "Cycle the Continental Divide" event with information about the dates, route, costs and basic requirements. Anyone interested in participating is encouraged to fill out the registration form. (Please include your full name, email, phone, date of birth, home state or country, and any special accommodations/comments.)</li>
@@ -174,7 +177,26 @@
 <li>Our Service page provides information regarding availble options for tune ups and repairs.</li>
 <li>The Contact page contains our location as well as phone and email information.</li>
 </ul>  </div>
-
+<div class="content clearfix">
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/recumbentBike.JPG" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
+    <h4>Some of the features included on our new site:</h4>
+<ul><li>The Adventure Tours page details daily guided bicycle adventures with information about the length, required skill level, cost and location of the tours.</li>
+<li>The Event page highlights our annual "Cycle the Continental Divide" event with information about the dates, route, costs and basic requirements. Anyone interested in participating is encouraged to fill out the registration form. (Please include your full name, email, phone, date of birth, home state or country, and any special accommodations/comments.)</li>
+<li>Our Sales page offers great deals on new and used bikes available for purchase in store.</li>
+<li>Our Service page provides information regarding availble options for tune ups and repairs.</li>
+<li>The Contact page contains our location as well as phone and email information.</li>
+</ul>  </div>
+      <div class="content clearfix">
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/tandemBike.jpeg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
+    <h4>Some of the features included on our new site:</h4>
+<ul><li>The Adventure Tours page details daily guided bicycle adventures with information about the length, required skill level, cost and location of the tours.</li>
+<li>The Event page highlights our annual "Cycle the Continental Divide" event with information about the dates, route, costs and basic requirements. Anyone interested in participating is encouraged to fill out the registration form. (Please include your full name, email, phone, date of birth, home state or country, and any special accommodations/comments.)</li>
+<li>Our Sales page offers great deals on new and used bikes available for purchase in store.</li>
+<li>Our Service page provides information regarding availble options for tune ups and repairs.</li>
+<li>The Contact page contains our location as well as phone and email information.</li>
+</ul>  </div>
   
   </div>
 <div class="panel-separator"></div><div class="panel-pane pane-node"  >
