--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
+<meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
+<link rel="stylesheet" href="styles/normalize.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
+    
 <body>
-    <h1>logan pierce</h1>
+<header>
+    <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p>
+</h1>
+</header>
+<nav> 
+<!––Main Menu goes here.-->++
+</nav>
+<main>
+<img src="loganphoto.jpeg" width="200" height="273" alt="My Profile Picture" align="right">  
+    <br>
+    <br>
+    <br>
+    <h1><p align="center">"WDD 230 - Assignment Portal."</p>
+</h1>
+    <li><p align="center">Lesson 3: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 4: <a href=>TBD</a></p></li>
+     <li><p align="center">Lesson 5: <a href=>TBD</a></p></li>
+     <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
+     <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
+    
+    <li><p align="center">Lesson 8: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 9: <a href=>TBD</a>
+<a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 10: <a href=>TBD</a></p></li>
+</main>
+<footer>
+    <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2020 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
+<link rel="stylesheet" href="styles/main.css">
+</footer>
 </body>
 </html>
