--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
 </h1>
 </header>
 <nav> 
-<!––Main Menu goes here.-->++
+<!––Main Menu goes here.-->
 </nav>
 <main>
-<img src="loganphoto.jpeg" width="200" height="273" alt="My Profile Picture" align="right">  
+<img src="Images/loganphoto.jpeg" width="200" height="273" alt="My Profile Picture" align="right">  
     <br>
     <br>
     <br>
-    <h1><p align="center">"WDD 230 - Assignment Portal."</p>
-</h1>
+    <h1><p align="center">"WDD 230 - Assignment Portal."</p></h1>
     <li><p align="center">Lesson 3: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 4: <a href=>TBD</a></p></li>
      <li><p align="center">Lesson 5: <a href=>TBD</a></p></li>
      <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
      <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
-    
     <li><p align="center">Lesson 8: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 9: <a href=>TBD</a>
-<a href=>TBD</a></p></li>
     <li><p align="center">Lesson 10: <a href=>TBD</a></p></li>
 </main>
 <footer>
