--- a/weekone/index.html
+++ b/weekone/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
-<link rel="stylesheet" href="styles/normalize.css">
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/main.css">
 </head>
     
 <body>
@@ -18,7 +18,7 @@
 <!––Main Menu goes here.-->
 </nav>
 <main>
-<img src="Images/loganphoto.jpeg" width="200" height="273" alt="My Profile Picture" align="right">  
+<img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
     <br>
     <br>
     <br>
@@ -29,7 +29,7 @@
      <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
      <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 8: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 9: <a href=>TBD</a>
+    <li><p align="center">Lesson 9: <a href=>TBD</a></p><li>
     <li><p align="center">Lesson 10: <a href=>TBD</a></p></li>
 </main>
 <footer>
