--- a/weekone/index.html
+++ b/weekone/index.html
@@ -34,7 +34,7 @@
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2020 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="css/main.css">
 </footer>
 </body>
 </html>
