--- a/weekone/index.html
+++ b/weekone/index.html
@@ -5,36 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="weekone/css/main.css">
 </head>
     
 <body>
 <header>
-    <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p>
-</h1>
+    <img src="weekone/images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
+    <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p></h1>
 </header>
 <nav> 
-<!––Main Menu goes here.-->
-</nav>
-<main>
-<img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
+<ul>
     <br>
     <br>
     <br>
     <h1><p align="center">"WDD 230 - Assignment Portal."</p></h1>
     <li><p align="center">Lesson 3: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 4: <a href=>TBD</a></p></li>
-     <li><p align="center">Lesson 5: <a href=>TBD</a></p></li>
-     <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
-     <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 5: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 8: <a href=>TBD</a></p></li>
     <li><p align="center">Lesson 9: <a href=>TBD</a></p><li>
     <li><p align="center">Lesson 10: <a href=>TBD</a></p></li>
-</main>
+    </ul>
+</nav>
 <footer>
-    <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2020 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
-<link rel="stylesheet" href="css/main.css">
+    &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+    <br>
+    Last Updated: <span id="modifiedTime"></span>
 </footer>
+    <script src='weekone/js/main.js'></script>
+</div>
 </body>
 </html>
