--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
-<link rel="stylesheet" href="weekone/css/main.css">
+<link rel="stylesheet" href="css/main.css">
 </head>
     
 <body>
 <header>
-    <img src="weekone/images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
+    <img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture" align="right">  
     <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p></h1>
 </header>
 <nav> 
@@ -34,7 +34,7 @@
     <br>
     Last Updated: <span id="modifiedTime"></span>
 </footer>
-    <script src='weekone/js/main.js'></script>
+    <script src='js/main.js'></script>
 </div>
 </body>
 </html>
