--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
     <br>
     <br>
     <h1><p align="center">"WDD 230 - Assignment Portal."</p></h1>
-    <li><p align="center">Lesson 3: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 4: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 5: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 6: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 7: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 8: <a href=>TBD</a></p></li>
-    <li><p align="center">Lesson 9: <a href=>TBD</a></p><li>
-    <li><p align="center">Lesson 10: <a href=>TBD</a></p></li>
+    <li><p align="center">Lesson 2: <a href=>Assignment Link</a></p></li>
+    <li><p align="center">Lesson 3: <a href=>Assignment Link</a></p></li>
+    <li><p align="center">Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
+
     </ul>
 </nav>
 <footer>
