--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     
 <body>
 <header>
-    <img src="images/loganphoto.jpg" width="240" height="250" alt="My Profile Picture" align="right">  
-    <h1><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">Logan M. Pierce</p></h1>
+    <div id="container">
+
+    <img src="images/loganphoto.jpg" alt="My Profile Picture">  
+    <h1>Logan M. Pierce</h1>
 </header>
 <nav> 
 <ul>
-    <br>
-    <br>
-    <br>
-    <h1><p align="center">"WDD 230 - Assignment Portal."</p></h1>
+    <h2><p>"WDD 230 - Assignment Portal."</p></h2>
     <li><p align="center">Lesson 2: <a href=>Assignment Link</a></p></li>
     <li><p align="center">Lesson 3: <a href=>Assignment Link</a></p></li>
     <li><p align="center">Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
