--- a/Index/Index.html
+++ b/Index/Index.html
@@ -37,7 +37,8 @@
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
-<link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
 </footer>
 </body>
 </html>
