--- a/googlefontapi.html
+++ b/googlefontapi.html
@@ -7,7 +7,7 @@
     <title>Google Font API Example</title>
     <meta name="description" content="This is an example of consuming the fonts.google.com api service.">
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed:wght@500&family=Roboto&display=swap" rel="stylesheet">
-    <link href="style/main.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
 </head>
 
 <body>
