--- a/Index/Index.html
+++ b/Index/Index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en-US">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CIT 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in CIT 230: Web Frontend Development at BYU-Idaho.">
-<link rel="stylesheet" href="styles/normalize.css">
-<link rel="stylesheet" href="styles/main.css">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/small.css">
+<link rel="stylesheet" href="css/medium.css">
+
 </head>
     
 <body>
@@ -37,8 +42,8 @@
 </main>
 <footer>
     <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">&copy; 2018 Logan Pierce, Texas, <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a></p>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </footer>
 </body>
 </html>
