--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
 <link rel="stylesheet" href="css/small.css">
 <link rel="stylesheet" href="css/medium.css">
+<link rel="stylesheet" href="css/normalize.css">
+
 </head>
     
 <body>
