--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
 
-    <img src="images/loganphoto.jpg" alt="My Profile Picture">  
+    <img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture">  
     <h1>Logan M. Pierce</h1>
 <nav> 
 <ul>
