--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
+<link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/small.css">
 <link rel="stylesheet" href="css/medium.css">
-<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/large.css">
 
 </head>
     
 <body>
     <div id="container">
 
-    <img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture">  
     <h1>Logan M. Pierce</h1>
+    <img src="images/loganphoto.jpg" width="200" height="273" alt="My Profile Picture">  
 <nav> 
 <ul>
+    
     <h2><p>WDD 230 - Assignment Portal</p></h2>
     <hr>
     <li><p>Lesson 2: <a href=>Assignment Link</a></p></li>
