--- a/index.html
+++ b/index.html
@@ -3,36 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
+<title>WDD 230 Assignment Portal | Logan M. Pierce | BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/small.css">
 <link rel="stylesheet" href="css/medium.css">
 <link rel="stylesheet" href="css/large.css">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
     
 <body>
+    <header>
     <div id="container">
     <h1>Logan M. Pierce</h1>
     <img src="images/loganphoto.jpg" width="250" height="273" alt="My Profile Picture">  
-<nav> 
-<ul>
-    
+    </header>
+    <main>
     <h2><p>WDD 230 - Assignment Portal</p></h2>
-    <hr>
+    <nav> 
+    <ul>
     <li><p>Lesson 2: <a href=>Assignment Link</a></p></li>
     <li><p>Lesson 3: <a href=>Assignment Link</a></p></li>
     <li><p>Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
 
     </ul>
 </nav>
+</main>
 <footer>
+    <p class="first">
     &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+    </p>
     <br>
+    <p class="second">
     Last Updated: <span id="modifiedTime"></span>
-</footer>
+    </p>
+    </footer>
+    </body>
+    </div>
     <script src='js/main.js'></script>
-</div>
-</body>
-</html>
+    </html>
