--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
     
 <body>
     <header>
-    <div id="container">
     <h1>Logan M. Pierce</h1>
     <img src="images/loganphoto.jpg" width="250" height="273" alt="My Profile Picture">  
     </header>
     <main>
-    <h2><p>WDD 230 - Assignment Portal</p></h2>
+    <h2>WDD 230 - Assignment Portal</h2>
     <nav> 
     <ul>
-    <li><p>Lesson 2: <a href=>Assignment Link</a></p></li>
-    <li><p>Lesson 3: <a href=>Assignment Link</a></p></li>
-    <li><p>Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
+    <li><p>Lesson 2: <a href="#">Assignment Link</a></p></li>
+    <li><p>Lesson 3: <a href="#">Assignment Link</a></p></li>
+    <li><p>Lesson 4: <a href="#">Link</a> | <a href="#">Link</a></p></li>
 
     </ul>
 </nav>
@@ -39,6 +38,5 @@
     </p>
     </footer>
     </body>
-    </div>
     <script src='js/main.js'></script>
     </html>
