--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
     <h1>Logan M. Pierce</h1>
-    <img src="images/loganphoto.jpg" width="250" height="273" alt="My Profile Picture">  
+    <img src="images/loganphoto.jpg" alt="My Profile Picture">  
     </header>
     <main>
     <h2>WDD 230 - Assignment Portal</h2>
